--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         height: 80vh;
         margin: 0;
         background-image: url("1.jpg");
@@ -108,6 +109,7 @@
         <button onclick="logFormData(event)">Get a Call</button>
       </form>
     </div>
+    <ul id="items-group"></ul>
     <script src="app.js"></script>
   </body>
 </html>
