--- a/index.html
+++ b/index.html
@@ -71,14 +71,20 @@
         cursor: pointer;
       }
 
-      .deleteButton {
+      .deleteButton,
+      .editButton {
         background-color: red;
         color: white;
         font-weight: bold;
         border: none;
-        border-radius: 10px;
+        border-radius: 6px;
         padding: 5px;
         cursor: pointer;
+      }
+
+      .editButton {
+        background-color: blue;
+        margin-left: 5px;
       }
 
       button:hover {
