--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       </form>
     </div>
     <ul id="items-group"></ul>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
