--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
       .deleteButton,
       .editButton {
+        margin: 5px 10px;
         background-color: red;
         color: white;
         font-weight: bold;
